--- a/index.html
+++ b/index.html
@@ -2,34 +2,94 @@
 <html lang="en">
 
 <head>
+    <title>Omega Capital</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
-    <title>David Chong</title>
-    <link href="https://fonts.googleapis.com/css2?family=Jaldi&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Hind+Vadodara:wght@500&family=Quattrocento+Sans&display=swap" rel="stylesheet">
+    <title>Omega Capital</title>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Roboto+Condensed&display=swap');
+        </style>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
+            </style>
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Yanone+Kaffeesatz&display=swap');
+        </style>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Julius+Sans+One&family=Yanone+Kaffeesatz&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/e35866c8ee.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
-    <div id="beginning">
-        <p id="title"> David Chong</p>
-        <p id="blurb"> Computer Science Enthusiast // Web Designer </p>
-    </div>
-    <div class="introductions">
-        <div class="abtme">
-            <h2 class="introText"> ABOUT ME</h2>
-            <p>I am a rising junior currently attending Stuyvesant Highschool.  While attending All Star Code, I am learning Javascript, CSS and HTML.</p>
+    <div class = "header">
+        <div class = "left">
+            <img class = "logo" src = "images\logoWhite2.png" alt = "logo">
+            <H2 class = "logoText">Omega Capital</H2>
         </div>
-        <div class="skillsHobbies">
-            <h2 class="introText">SKILLS/HOBBIES</h2>
-            <p>I excel in logical deduction, problem solving, and grasping concepts quickly.  I play lots of videogames, as well as skate and play basketball.</p>
+        <div class = "right">
+                <H2 class = "info"><a href = "#info">Information</a></H2>  
+                <H2 class = "contact" id = "task"><a href = "#contact">Contact</a></H2>
         </div>
     </div>
-    <div class="contacts">
-        <h2> Contact Me</h2>
+    <div class = "introPic"> 
     </div>
-    <footer>
-        <p> &copy; copyright David Chong 2020</p>
-    </footer>
+    <div class = "text">
+        <div class = "missionStatement">
+            <h2 class = "heading" id = "info">What is Omega Capital?</h2>
+            <p>
+                Omega Capital is a new Investment Club at Michigan Ross. We focus on generating high, risk adjusted rates of return using short-term investment horizons to capitalize on intraday and intraweek price movements. We specialize in trading options premiums to leverage capital, in order to maximize returns. Both Fundamental and Technical Analysis is used to provide us with position entry and exit points, with an emphasis on remaining cognizant of prevailing market trends and broader macroeconomic factors. Our emphases include education, performance, community, professional development, and autonomy. 
+
+            </p>
+
+        </div>
+        <br>
+        <hr>
+        <div>
+            <h2 class = "heading" >Why were We Created?</h2>
+            <p> 
+                Omega Capital was created after its founders realized that there was a gap in the Investment Club offerings at Michigan Ross. Every investment club at Michigan Ross focuses on long-term investment horizons, leaving students with an interest in short-term investments wanting. 
+
+    In addition, the founders of Omega Capital disagreed with how Ross investment clubs are run, particularly with the process of entering and closing positions. We believe that the traditional stock pitch and voting method used to decide whether to enter or close positions is inefficient and ineffective. 
+
+    With regard to its inefficiency, the stock pitch method, while valuable for learning, is extremely slow, with weeks of research required before entering or closing positions. In addition, trades are often executed days after voting is concluded, with potential entry points long gone by the time a position is entered providing suboptimal returns that rarely beat benchmark rates of return.
+
+    With regard to its ineffectiveness, the stock pitch and voting method has proven to generate poorer returns relative to a benchmark rate of return, meaning that the extra research and labor put into building complicated financial models is oft for nothing. From a purely performance based standpoint, most Investment Clubs at Ross would be much better off by simply allocating all of their capital into an ETF that tracks the S&P 500, as they are rarely able to beat this rate of return. In addition, the current market climate as well as the climate for the foreseeable future is not optimal for value investing, which is what every Investment Club at Ross purports to be. This is of no fault of their own and is stated as matter of fact rather than an attack on their methodologies.
+
+    In addition to these problems with the stock pitch method, the voting system leaves no room for contrarians to voice their opinions, leading to potentially huge unrealized gains. We believe that with the right education program, every member’s opinion is important and should be offered significant autonomy in making club investment decisions.
+
+    Finally, the founders of Omega Capital disagreed with the recruiting processes of other Investment Clubs at Michigan Ross. Investment Clubs at Michigan Ross are notoriously difficult to be accepted into, with many clubs boasting a 3-5% acceptance rate despite generating mediocre returns. With the founders having recruited for these clubs, we found that these low acceptance rates are the result of biased recruiting methodologies. It should be noted that low acceptance rates are not inherently bad; we believe, however, that the reasons as to why they are low are not conducive to performance measured by a high rate of return. For example, every Investment Club explicitly states that no prior experience is necessary in order to join their club. A closer look into the interview process and the types of questions asked to prospective members shows that this is clearly not the case. This leads to a catch-22 situation in which members cannot gain entry into the club without prior investing knowledge, but need to gain acceptance into the club to gain investing knowledge. As a result, many that gain acceptance to Investment Clubs either have prior knowledge, or are otherwise admitted for non-merit based reasons such as internal referrals. We do things differently by offering every prospective member a comprehensive education into the financial markets before applying. This allows prospective members ultimately not given an offer of admission to leverage that knowledge into recruiting for other investment clubs, or for personal gain. In addition, this allows for top-tier talent to realize their full potential, which would have otherwise been impossible if prior knowledge was required on a de-facto basis.
+
+            </p>
+        </div>
+        <br>
+        <hr>
+        <div>
+            <h2 class = "heading" id = "contact">Contact Us</h2>
+            <p> 
+                This Club is still a work-in-progress.  Contacts for clubs will be created later, but the leader's socials are linked below!
+            </p>
+            <div class = "icons">
+                <span><a href = "https://www.facebook.com/Omegacapitalum-105702934949527" target="_newtab"><i class="fab fa-facebook"></i></a></span>
+                <span><a href = "https://www.instagram.com/omegacapitalum/" target="_newtab"><i class="fab fa-instagram"></i></a></span>
+                <span><a href="https://www.linkedin.com/in/chonga/" target="_newtab"><i class="fab fa-linkedin-in"></i></a></span>
+                <span><a href = "mailto:adchong@umich.edu?Subject=Hey%20Adam!" target="_newtab"><i class="far fa-envelope"></i></a></span>
+            </div>
+        </div>
+        <br>
+        <hr>
+        <br>
+        <footer class = "bottom">
+            <p> &copy;   David Chong 2021</p>
+        </footer>
+</div>
 </body>
 
-</html>
+
+
+
+
+
+
+</html> 
